products/connectivity/cilium/templates/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-security-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble
  oidc:
    clientID: "SmbS2Rrp8G69p3GMx8ZLxbN4je5nqX6Al8x4rVny"
    clientSecret:
      name: oidc-secret
    provider:
      issuer: https://authentik.feddema.dev/application/o/hubble/
    redirectURL: https://hubble.feddema.dev/oauth2/callback
    logoutPath: /oauth2/logout
